@@ -127,13 +127,29 @@ public class UserAccessKeyFilter implements Filter {
 			}
 
 			if (provider != null) {
-				SocialPropertiesUtil socialData = SocialPropertiesUtil.getInstance();
+				AuthProvider providerAuthObject = null;
+				try {
+					providerAuthObject = AuthProvider.valueOf(provider);
+				} catch (Exception e) {
+					classLogger.warn(
+							"User is attempting to login using bearer token for provider '{}' but provider does not exist",
+							provider);
+					arg2.doFilter(arg0, arg1);
+					return;
+				}
 
-				Map<String, Boolean> loginsMap = socialData.getLoginsAllowed();
-				Boolean providerLogin = loginsMap.get(provider.toLowerCase());
-				if (providerLogin == null || !providerLogin) {
+				SocialPropertiesUtil socialData = SocialPropertiesUtil.getInstance();
+				boolean loginAllowed = false;
+				List<Map<String, Object>> loginsMap = socialData.getAvailableProviders();
+				for (Map<String, Object> login : loginsMap) {
+					if (login.get("label").equals(providerAuthObject.getLabel())) {
+						loginAllowed = true;
+						break;
+					}
+				}
+				if (!loginAllowed) {
 					classLogger.warn("User is attempting to login using bearer token for provider '" + provider
-							+ "' but provider either does not exist or login is not allowed");
+							+ "' but login is not allowed");
 					arg2.doFilter(arg0, arg1);
 					return;
 				}
@@ -150,7 +166,7 @@ public class UserAccessKeyFilter implements Filter {
 
 				try {
 					IAccessTokenFiller thisTokenFiller = (IAccessTokenFiller) Class.forName(tokenFillerClass)
-							.newInstance();
+							.getConstructor().newInstance();
 					String prefix = thisProvider.getLabel().toLowerCase() + "_";
 					String userInfoURL = socialData.getProperty(prefix + "userinfo_url");
 					// "name","id","email"
@@ -177,7 +193,7 @@ public class UserAccessKeyFilter implements Filter {
 					// now store in the session
 					UserResource.addAccessToken(accessToken, request, autoAdd);
 				} catch (Exception e) {
-					classLogger.error(Constants.STACKTRACE, e);
+					classLogger.error("Error filling access token for bearer authentication with provider '{}'", thisProvider.getLabel(), e);
 				}
 			}
 		} else if (authValue.startsWith("Basic") || authValue.startsWith("basic")) {
@@ -195,7 +211,7 @@ public class UserAccessKeyFilter implements Filter {
 					try {
 						user = SecurityUserAccessKeyUtils.validateKeysAndReturnUser(accessKey, secretKey);
 					} catch (IllegalAccessException e) {
-						classLogger.error(Constants.STACKTRACE, e);
+						classLogger.error("Error validating user access key '{}' against secret key", accessKey, e);
 					}
 					if (user == null) {
 						classLogger.error("User could not login using user access key '" + accessKey
